skins/oasis/css/core/_article.scss
.WikiaArticle {
	@include bodytext;
	padding: 0 10px;
	position: relative;
	min-height: 250px;
	z-index: 1;
	h1, h2, h3, h4, h5, h6 {
		margin: .5em 0 .2em;
	}
	h1 {
		font-size: 24px;
	}
	h2 {
		border-bottom: solid 1px $color-headline-border;
		font-size: 18px;
		margin-top: 14px;
		*overflow: hidden;
	}
	h3 {
		font-size: 16px;
	}
	h4 {
		font-size: 14px;
	}
	h5 {
		font-size: 12px;
	}
	h6 {
		font-size: 11px;
	}
	.editsection {
		float: none;
		font-size: 13px;
		margin-left: 10px;
		vertical-align: baseline;
		img {
			vertical-align: text-bottom;
		}
	}
	h1, h5, h6 {
		.editsection {
			display: none;
		}
	}
	.noarticletext {
		border: 1px solid $color-article-toc-border;
		padding: 0 13px;
	}

	a.new,
	a.new:visited {
		color: #cc2200;
	}

	b, strong {
		font-weight: bold;
	}

	i, em {
		font-style: italic;
	}

	sup {
		font-size: 11px;
		vertical-align: super;
	}

	sub {
		font-size: 11px;
		vertical-align: sub;
	}

	ul, ol {
		margin: 0.4em 0 0.5em 2.5em;
	}

	ol {
		list-style: decimal;
	}

	ul {
		list-style: square;
	}

	dl {
		margin: 1em 0;
	}

	dt {
		font-weight: bold;
		margin-bottom: 1px;
	}

	dd {
		margin-bottom: 1px;
		margin-left: 24px;
	}

	img {
		vertical-align: middle;
	}

	blockquote {
		margin: 12px 40px;
	}

	.center {
		text-align: center;
		width: 100%;
		* {
			margin-left: auto;
			margin-right: auto;
		}
	}
	.thumbborder {
		border: 1px solid $color-article-thumb-border;
	}
	.floatright {
		clear: right;
		float: right;
		position: relative;
		margin: 0 0 6px 6px;
		border: 0;
	}
	.floatleft {
		float: left;
		clear: left;
		position: relative;
		margin: 0 6px 6px 0;
		border: 0;
	}
	.thumbinner {
		//background-color: $color-article-thumb-background;
		@include linear-gradient($color-article-thumb-background, top, $color-page, 0%, $color-article-thumb-background, 100%);
		border: 1px solid $color-article-thumb-border;
		overflow: hidden;
		padding: 3px;
		text-align: center;
	}
	.thumbcaption {
		line-height: 18px;
		padding: 4px 1px 0 1px;
		text-align: left;
	}
	.tright {
		clear: right;
		float: right;
		margin: 0 0 16px 16px;
		outline: 10px solid $color-page;
	}
	.tleft {
		float: left;
		clear: left;
		margin: 0 16px 16px 0;
		outline: 10px solid $color-page;
	}
	.magnify {
		float: right;
		margin-top: 4px;
	}

	.picture-attribution {
		display: block;
		font-size: 11px;
		margin-right: 16px;
		text-align: left;
	}
	.picture-attribution .avatar {
		margin-right: 3px;
		vertical-align: middle;
	}

	.toc {
		background-color: $color-article-toc-background;
		border: 1px solid $color-article-toc-border;
		border-collapse: separate;
		margin: 1em 0;
		padding: 5px;
		ul {
			margin: 0;
			list-style: none;
			ul {
				margin-left: 2em;
			}
		}
	}
	#toctitle {
		text-align: center;
		h2 {
			border: none;
			display: inline;
			font-size: 14px;
		}
		.toctoggle {
			font-size: 12px;
		}
	}
	p {
		margin: 0.4em 0 0.5em;
	}
	p + p {
		margin: 1em 0;
	}
	pre {
		background-color: $color-module-shadow;
		border: 1px solid $color-page-border;
		line-height: 14px;
		overflow: auto;
		padding: 12px;
	}
	.printfooter {
		display: none;
	}

	// FIXME: anyone still using gopher?
	a.external, a[href^="gopher://"] {
		&:after {
			background-image: url(/skins/oasis/images/sprite.png);	/* $wgCdnStylePath */
			background-position: top right;
			background-repeat: no-repeat;
			content: "";
			display: inline-block;
			height: 16px;
			padding: 0px 3px 0 0;
			vertical-align: text-top;
			width: 10px;
		}
	}

	// RT #75154
	.plainlinks {
		a {
			background-image: none;
			padding-right: 0;
			&:after {
				display: none;
			}
		}
	}

	#filetoc {
		text-align: center;
		border: 1px solid $color-article-toc-border;
		background-color: $color-article-toc-background;
		padding: 5px;
		font-size: 12px;
		margin-bottom: 5px;
		margin-left: 0;
		margin-right: 0;
		li {
			display: inline;
			list-style-type: none;
			padding-right: 23px;
		}
	}
	// highlight selected reference (ported from Vector skin)
	.references > li:target {
		background-color: mix($color-page, $color-links, 85%);
	}

	// video gallery
	div.gallerybox div.thumb {
		background: $color-article-thumb-background;
		border: 1px solid $color-article-thumb-border;
	}

	// for special pages
	fieldset {
		border: solid 1px $color-links;
		margin: 1em 0;
		padding: 0 1em 1em;
		legend {
			padding: 7px;
		}
	}
	.infobox {
		border: 1px solid $color-page-border;
		background-color: mix($color-page, #000, 95%);
		color: $color-text;
		margin-bottom: 0.5em;
		margin-left: 1em;
		padding: 0.2em;
		float: right;
		clear: right;
	}

	// /** categories **/
	#mw-pages {
		h3 {
			font-weight: bold;
		}
		ul {
			margin-left: 16px;
		}
	}

	//history page
	#pagehistory li.selected {
		background-color: $color-pagehistory;
	}
	//diff page
	td.diff-context {
		background-color: $color-diff-context;
	}
	td.diff-deletedline,
	td.diff-addedline {
		color: #000;
	}

	.fbconnect-synced-profile {
		border-bottom: solid 1px $color-page-border;
		margin-bottom: 5px;
		padding-bottom: 5px;
		
		th {
			width: 25%;
			text-align: right;
			padding-right: 10px;
			vertical-align: top;
		}
		
		td {
			margin-left: 8px;
			padding-right: 10px;
		}
	}
	
	/** user interview **/
	.user-interview-profile-container {
		@include clearfix;
		
		text-align: left;
		td {
			padding-right: 20px;
		}
		
		margin: {
			top: 0px;
			left: 10px;
			bottom: 10px;
		}
		
		.avatar {
			float: left;
		}	
		
		.odd blockquote {
			background: $color-comment-odd;
			&:after {
				border-color: transparent $color-comment-odd $color-comment-odd transparent;
			}
		}
		.even blockquote {
			background: $color-comment-even;
			&:after {
				border-color: transparent $color-comment-even $color-comment-even transparent;
			}
		}
		
		blockquote {
			@include border-radius(5px);
			border: 1px solid $color-page-border;
			margin: 0 5px 10px 75px;
			padding: 15px 10px 10px 15px;
			position: relative;
			p {
				margin-bottom: 1em;
			}
			ul, ol {
				margin: 0.4em 0 0.5em 2.5em;
			}
			ol {
				list-style: decimal;
			}
			ul {
				list-style: square;
			}
			b, strong {
				font-weight: bold;
			}
			i, em {
				font-style: italic;
			}
			.article-comm-text {
				overflow: hidden;
				width: 553px;
			}
			
			&.question {
				padding-top: 10px;
			}
		}
		
		blockquote.answer:before {
			border-color: transparent $color-page-border $color-page-border transparent;
			border-style: solid;
			border-width: 11px;
			content: " ";
			height: 0px;
			position: absolute;
			top: 14px;
			left: -22px;
			width: 0px;
		}
		blockquote.answer:after {
			border-style: solid;
			border-width: 10px;
			content: " ";
			height: 0px;
			position: absolute;
			top: 15px;
			left: -20px;
			width: 0px;
		}

		h3 {
			font: {
				size: 12px;
				weight: bold;	
			}
		}
	}	

	.wikia-infobox {
		$cell-width: 225px;

		@include linear-gradient(false, top, $color-module-highlight, 60%, $color-module-shadow, 100%);
		border: 1px $color-page-border solid;
		float: right;
		line-height: 12px;

		padding: {
			bottom: 20px;
			left: 10px;
			right: 10px;
		}
		margin: {
			top: 0px;
			right: 0px;
			bottom: 16px;
			left: 16px;
		}

		table {
			@include bodytext;
			border-collapse: collapse;
			line-height: 15px;
			width: $cell-width;

			td {
				overflow: hidden;
				padding: {
					bottom: 7px;
					left: 0px;
					right: 20px;
					top: 7px;
				}
				vertical-align: top;
			}

			th {
				@extends td;
				font-weight: bold;
				padding: {
					bottom: 7px;
					left: 7px;
					right: 10px;
					top: 7px;
				}
				text-align: left;
				vertical-align: top;
				width: 30%;

				&.wikia-infobox-header {
					font-size: 17px;
					font-weight: bold;
					margin-top: 20px;
					padding: {
						bottom: 20px;
						top: 20px;
						left: 10px;
						right: 10px;
					}
					text-align: left;
				}
			}

			.wikia-infobox-image {
				text-align: center;
				overflow: hidden;
				padding: 0;
				width: $cell-width;
			}

			.wikia-infobox-caption {
				text-align: center;
				font-size: 12px;
			}

			.wikia-infobox-caption { padding-bottom /*\**/: 10px\9 } // /** dirty IE hack, affects all versions till 8**/

			// sections separator
			.wikia-infobox-section {
				th:first-child {
					div {
						border-top: 1px $color-page-border solid;
						margin-top: 7px;
						padding-top: 20px;
					}
				}
			}
		}
	}
}

// RT #70017: wikitable class for skinning normal tables
table.wikitable {
	background: darken($color-page, 2%);
	border-collapse: collapse;
	border: 1px $color-page-border solid;
	margin: 1em 1em 1em 0;

	th, td {
		border: 1px darken($color-page, 35%) solid;
		padding: 0.2em;
	}
	th {
		background: darken($color-page, 5%);
		text-align: center;
	}
	caption {
		font-weight: bold;
	}
}

// /** Interlang Links **/
.WikiaArticleInterlang {
	margin: 10px;
	padding: 10px;
	clear: both;

	h3 {
		float: left;
		margin-right: 5px;
	}

	ul {
		li {
			border-left: 1px solid $color-page-border;
			float: left;
			line-height: 15px;
			margin-bottom: 6px;
			padding-left: 5px;
			padding-right: 5px;

			&:first-child {
				border: none;
				padding-left: 0px;
			}
			/*&:last-child {
				border: none;
			}*/
			&.more-link {
				border: none;
			}
			&.more {
				display: none;
			}
		}
	}
}


// /** WikiaWideTables **/
.WikiaWideTablesWrapper {
	position: relative;
	&.border {
		border-right: 1px dashed $color-page-border;
	}
	>.table {
		overflow: hidden;
	}
	>.popout {
		cursor: pointer;
		position: absolute;
		right: -12px;
		top: 0;
		&.float {
			position: fixed;
			left: 50%;
			right: auto;
		}
	}
}

